[workspace]
resolver = "2"
members = [
    "root_proxy",
    "simple_proxy",
    "load_balancer",
    "header_filter",
]

[workspace.dependencies]
pingora = { git = "https://github.com/cloudflare/pingora.git", features = ["proxy", "openssl"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"